--- a/client/src/app/pages/company/company-detail/company-detail.component.scss
+++ b/client/src/app/pages/company/company-detail/company-detail.component.scss
@@ -288,6 +288,30 @@ a {
         float: right;
         width: 70.3%;
         padding-bottom: 80px;
+        &.positions-list {
+          padding-top: 0;
+        }
+
+        .select-style {
+          overflow: hidden;
+          margin-bottom: 15px;
+          & .selectall {
+            float: left;
+            width: 70%;
+
+            & round-checkbox {
+              display: inline;
+              margin-right: 22px;
+            }
+            & .drop-buttons{
+              display: none;
+            }
+          }
+          & action-button {
+            @include inline-block-btn;
+            margin-right: 2%;
+          }
+        }
 
         .row {
           background: #ffffff;
@@ -336,6 +360,287 @@ a {
           simple-tag {
             display: inline-flex;
             margin: 10px 10px 0 0;
+          }
+        }
+
+        .position-row {
+          background: $white;
+          padding: 10px 18px;
+          border-bottom: 1px solid map-get($md-cfaccent, 50);
+          margin-bottom: 5px;
+          border-radius: 5px;
+
+          & .qualification-level-m {
+            margin-top: 20px;
+            h5{
+              font-family: 'Helvetica Neue';
+            }
+            p{
+              margin-top: 0px;
+            }
+          }
+
+          &.selected {
+            background-color: $selected-bg-color;
+          }
+
+          &.no-job {
+            @include btn-align-center;
+          }
+
+          & round-checkbox {
+            @include inline-block-btn;
+            vertical-align: middle;
+          }
+
+          h1 {
+            @include inline-block-btn;
+            vertical-align: middle;
+            margin-bottom: 1px;
+            font-size: 30px;
+            line-height: 46px;
+            color: rgba(map-get($md-cfaccent, 500), .84);
+            margin-top: 0;
+            font-family: "Poppins", sans-serif;
+            cursor: pointer;
+            font-weight: 600;
+          }
+
+          & .position-right {
+            float: right;
+
+            & .heart-icon {
+              text-align: center;
+              margin: 0 auto 0;
+              display: inline-block;
+              width: 50px;
+              vertical-align: top;
+              height: 46px;
+              img{
+                &.before-heart-icon{
+                  margin-top: 14px;
+                }
+              }
+            }
+            vertical-align: middle;
+            & .dot-icon{
+              img{
+                margin: 0 0 0 15px;
+              }
+            }
+          }
+          img {
+            vertical-align: middle;
+            margin-right: 8px;
+          }
+        }
+
+        & .mat-icon {
+          vertical-align: middle;
+          margin-right: 20px;
+        }
+
+        h5 {
+          margin-bottom: 5px;
+          font-size: 14px;
+          line-height: 21px;
+          color: rgba(map-get($md-cfaccent, 500), .34);
+          font-weight: 400;
+          margin-top: 0;
+          font-weight: 400;
+
+          span {
+            display: inline-block;
+            margin-left: 4px;
+            color: rgba(map-get($md-cfaccent, 500), .84);
+          }
+        }
+
+        & .right-align {
+          @include inline-block-btn;
+          vertical-align: middle;
+        }
+
+        & .job-top-list {
+          ul {
+            padding: 0;
+            margin-top: 0;
+            margin-bottom: 0px;
+
+            li {
+              list-style: none;
+              @include inline-block-btn;
+              margin-right: 100px;
+              font-size: 14px;
+              line-height: 16px;
+              vertical-align: middle;
+              font-family: "Poppins", sans-serif;
+              font-weight: 400;
+
+              a{
+                @include inline-block-btn;
+                vertical-align: middle;
+                color: rgba(map-get($md-cfaccent, 500), .84);
+                text-decoration: none;
+              }
+
+              span{
+                @include inline-block-btn;
+                vertical-align: middle;
+                color: rgba(map-get($md-cfaccent, 500), .84);
+              }
+
+              img {
+                margin-right: 5px;
+                vertical-align: middle;
+              }
+            }
+          }
+        }
+
+        & .main-card {
+          ul {
+            padding: 0;
+            margin: 0;
+
+            li {
+              list-style: none;
+              @include inline-block-btn;
+              width: 49%;
+              vertical-align: top;
+              ul{
+                margin-top:0;
+                li{
+                  font-size: 14px;
+                }
+              }
+
+              .skills-preferred-m {
+                @include inline-block-btn;
+                margin: 0 5px 7px 0;
+                & simple-tag{
+                  font-family: "Poppins", sans-serif;
+                  color: rgba(map-get($md-cfaccent, 500), .05);
+                }
+              }
+
+              & .skil-height-fix {
+                overflow: hidden;
+                max-height: 45px;
+
+                &.skill-more-height {
+                  max-height: 135px;
+                }
+              }
+            }
+          }
+        }
+
+        & .show-button {
+          text-align: center;
+
+          action-button {
+            display: inline-block;
+            position: relative;
+            cursor: pointer;
+            &::after{
+              position: absolute;
+              right: -47px;
+              color: rgba(0, 29, 64, 0.1);
+              height: 100%;
+              width: 100%;
+              content: "|";
+              top: 20px;
+            }
+            &:last-child::after{
+              display: none;
+            }
+            &:focus {
+              outline: none;
+            }
+          }
+        }
+
+        & .qualification-level-m {
+          & simple-tag {
+            @include inline-block-btn;
+            margin: 12px 5px 22px 0px;
+            font-family: "Poppins", sans-serif;
+            font-weight: 400;
+          }
+        }
+
+        & .card {
+          margin: 20px 0;
+          & mat-grid-tile{
+            border: 1px solid #f0f0f0;
+            border-right: none;
+            &:last-child{
+              border-right:1px solid #f0f0f0;
+            }
+          }
+          & .card-item {
+            @include inline-block-btn;
+            width: 100%;
+            padding: 9px 15px 9px 15px;
+            vertical-align: middle;
+
+            span {
+              color: rgba(map-get($md-cfaccent, 500), .44);
+              font-size: 14px;
+              font-family: "Poppins", sans-serif;
+              font-weight: 400;
+            }
+
+            p {
+              margin: 3px 0 0;
+              font-size: 14px;
+              line-height: 16px;
+            }
+          }
+        }
+      }
+
+      .pagination {
+        float: right;
+
+        ul {
+          padding: 3px 10px;
+          border-radius: 50px;
+          background-color: map-get($md-cfgray, 500);
+          @include inline-block-btn;
+
+          li {
+            @include inline-block-btn;
+            height: 15px;
+            width: 15px;
+            font-size: 14px;
+            text-align: center;
+            border-radius: 100%;
+            padding: 8px;
+            overflow: hidden;
+            vertical-align: middle;
+            color: $header-color;
+            cursor: pointer;
+            font-family: "Poppins", sans-serif;
+            font-weight: 500;
+            line-height: 21px;
+
+            &.active {
+              background-color: $white;
+            }
+
+            &.large_pagination_button {
+              height: auto;
+              width: auto;
+              margin-top: 4px;
+            }
+
+            & span {
+              vertical-align: middle;
+              @include inline-block-btn;
+            }
+
           }
         }
       }
