--- a/client/src/app/pages/company/company-detail/company-detail.component.scss
+++ b/client/src/app/pages/company/company-detail/company-detail.component.scss
@@ -11,6 +11,9 @@ a {
 }
 
 :host {
+  legend {
+    display: none;
+  }
   .career-main {
     background-color: $bg-color-1;
     width:100%;
@@ -131,12 +134,17 @@ a {
           font-weight: 500;
           font-size: 20px;
           line-height: 1.7;
-          color: rgba(map-get($md-cfaccent, 500), .34);
+          color: rgba(map-get($md-cfaccent, 500), .30);
           margin: 10px 30px;
           text-transform: uppercase;
           &.active {
             color: map-get($md-cfprimary, 500);
           }
+        }
+        .divider {
+          width: 3px;
+          height: 14px;
+          background-color: rgba(map-get($md-cfaccent, 500), .34);
         }
       }
     }
@@ -694,6 +702,128 @@ a {
               @include inline-block-btn;
             }
 
+          }
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width:$max-tablet-breakpoint) {
+  :host {
+    legend {
+      position: fixed;
+      margin: 0;
+      height: 60px;
+      top: 70px;
+      left: 0;
+      width: 100%;
+      background-color: $bg-color-1;
+      border-bottom: 1px solid map-get($md-cfaccent, 50);
+      padding:0 40px;
+      box-sizing: border-box;
+      @include flex(row, center, space-between);
+      z-index: 100;
+      .nav-title {
+        cursor: pointer;
+        @include flex(row, center, flex-start);
+        h3 {
+          font-family: 'Poppins', sans-serif;
+          font-weight: 700;
+          font-size: 20px;
+          margin: 0;
+          line-height: 1.5;
+          color: map-get($md-cfprimary, 500);
+        }
+        mat-icon {
+          color: map-get($md-cfprimary, 500);
+          margin-left: 10px;
+          font-size: 20px;
+          width: 20px;
+          height: 20px;
+        }
+      }
+    }
+    .career-main {
+      .header-container {
+        margin-top: 60px;
+        .company-row {
+          @include flex(column, center, flex-start);
+
+          .company-detail {
+            @include flex(column, center, flex-start);
+            margin-top: 20px;
+
+            .company-locations,
+            .company-properties {
+              @include flex(row, flex-start, center);
+            }
+
+            .company-property {
+              .info {
+                min-width: 120px;
+              }
+            }
+          }
+        }
+      }
+
+      .main-container {
+        .nav-container {
+          position: fixed;
+          padding: 10px 40px 30px 40px;
+          left: 0;
+          width: 100%;
+          background-color: rgba(0, 0, 0, .32);
+          top: 130px;
+          height: calc(100vh - 130px);
+          transition: top 0.5s;
+          transition-timing-function: ease;
+          .nav-title {
+            display: none;
+          }
+        
+          &.nav-hidden {
+            top: -1000%;
+            transition: top 0.5s;
+            transition-timing-function: ease;
+          }
+        }
+
+        .list-container {
+          width: 100%;
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: $max-mobile-breakpoint) {
+  :host {
+    .career-main {
+      .header-container {
+        .tab-row {
+          display: none;
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 479px) {
+  :host {
+    .career-main {
+      .header-container {
+        .company-row {
+
+          .company-detail {
+            h4.company-location {
+              margin-right: 0;
+            }
+            .company-locations,
+            .company-properties {
+              @include flex(column, center, flex-start);
+            }
           }
         }
       }
