--- a/client/src/app/pages/company/company-detail/company-detail.component.scss
+++ b/client/src/app/pages/company/company-detail/company-detail.component.scss
@@ -13,6 +13,9 @@ a {
 :host {
   legend {
     display: none;
+    .drop-buttons{
+      display: none;
+    }
   }
   .career-main {
     background-color: $bg-color-1;
@@ -818,6 +821,12 @@ a {
             }
 
           }
+
+          .people-row {
+            .img-tag {
+              width: 330px;
+            }
+          }
         }
       }
     }
@@ -826,6 +835,12 @@ a {
 
 @media only screen and (max-width: $max-mobile-breakpoint) {
   :host {
+    legend {
+      .drop-buttons{
+        display: inline-block;
+      }
+    }
+
     .career-main {
       .header-container {
         .tab-row {
@@ -944,6 +959,14 @@ a {
               margin: 0px 5px 7px 0px;
               font-family: "Poppins", sans-serif;
               font-weight: 400;
+            }
+          }
+
+          .people-row {
+            .img-tag {
+              width: 100%;
+              max-width: 330px;
+              margin-right: 0;
             }
           }
         }
