--- a/client/src/app/pages/company/company-detail/company-detail.component.scss
+++ b/client/src/app/pages/company/company-detail/company-detail.component.scss
@@ -5,7 +5,7 @@ a {
 }
 
 .loader {
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
 }
@@ -42,30 +42,33 @@ a {
         box-sizing: border-box;
         margin-bottom: 1px;
         background-color: white;
-        @include flex(row, flex-start, flex-start);
+        display: inline-flex;
+        flex-wrap: wrap;
         .company-logo {
-          width: 125px;
-          height: 125px;
-          margin-right: 20px;
           img {
-            width: 100%;
-            height: 100%;
+            width: 125px;
+            height: 125px;
           }
         }
         .company-detail {
           box-sizing: border-box;
-          @include flex(column, flex-start, flex-start);
+          display: inline-flex;
+          flex-direction: column;
+          flex: 1;
+          margin-left: 30px;
+
           h2.company-name {
             font-family: 'Poppins', sans-serif;
             font-weight: 600;
             font-size: 30px;
             line-height: 1.2;
             color: rgba(map-get($md-cfaccent, 500), .84);
-            margin: 0;
+            margin: 0 0 5px 0;
           }
           .company-locations,
           .company-properties {
-            @include flex(row, flex-start, flex-start);
+            display: inline-flex;
+            flex-wrap: wrap;
           }
           h4.company-location {
             font-family: 'Poppins', sans-serif;
@@ -73,9 +76,13 @@ a {
             font-size: 14px;
             line-height: 1.2;
             color: rgba(map-get($md-cfaccent, 500), .84);
-            margin: 0;
-            margin-right: 25px;
-            margin-top: 10px;
+            display: flex;
+            align-items: center;
+            margin: 10px 20px 10px 0;
+            img {
+              width: 10px;
+              margin-right: 5px;
+            }
           }
           .company-property {
             display: grid;
@@ -84,8 +91,8 @@ a {
             ;
             grid-column-gap: 10px;
             background-color: transparent;
-            margin-top: 20px;
-            margin-right: 25px;
+            margin: 5px 10px 5px 0;
+            width: 240px;
 
             .image {
               grid-area: image;
@@ -750,25 +757,7 @@ a {
     .career-main {
       .header-container {
         margin-top: 60px;
-        .company-row {
-          @include flex(column, center, flex-start);
-
-          .company-detail {
-            @include flex(column, center, flex-start);
-            margin-top: 20px;
-
-            .company-locations,
-            .company-properties {
-              @include flex(row, flex-start, center);
-            }
-
-            .company-property {
-              .info {
-                min-width: 120px;
-              }
-            }
-          }
-        }
+        margin-bottom: 0;
       }
 
       .main-container {
@@ -796,6 +785,9 @@ a {
 
         .list-container {
           width: 100%;
+          &.positions-list {
+            padding-top: 10px;
+          }
 
           .select-style {
             margin: 9px 0;
@@ -843,6 +835,29 @@ a {
 
     .career-main {
       .header-container {
+        .company-row {
+          padding: 20px 20px;
+          @include flex(column, center, flex-start);
+
+          .company-detail {
+            @include flex(column, center, flex-start);
+            margin-top: 20px;
+
+            .company-locations,
+            .company-properties {
+              @include flex(column, center, flex-start);
+            }
+
+            h4.company-location {
+              margin-right: 0;
+            }
+
+            .company-property {
+              margin-right: 0;
+            }
+          }
+        }
+
         .tab-row {
           display: none;
         }
